--- a/index.liquid
+++ b/index.liquid
@@ -1,7 +1,11 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: Random Name Generator
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<div x-data="nameGenerator" class="container">
+    <h1 x-text="randomName" class="text-2xl font-bold"></h1>
+    <button @click="generateName" class="mt-4 px-4 py-2 bg-blue-500 text-white rounded">
+        Generate Random Name
+    </button>
+</div>
