--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,6 +9,7 @@ title: 11ty Boilerplate
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/styles/screen.css">
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
 <body>
   <nav>
@@ -18,5 +19,6 @@ title: 11ty Boilerplate
     </ul>
   </nav>
     {{ content }}
+  <script src="/assets/js/main.js" defer></script>
 </body>
 </html>
